--- a/cliente-service/src/main/resources/application.properties
+++ b/cliente-service/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+spring.datasource.url=jdbc:mysql://localhost/mvcspringboot?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#habilitar mediatype ej: pdf
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.media-types.pdf=aplication/pdf
+
+#Para agregar imagenes
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
