--- a/cliente-service/src/main/resources/application.properties
+++ b/cliente-service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:mysql://localhost/mvcspringboot?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
@@ -7,6 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#para colores
+spring.output.ansi.enabled=ALWAYS
 
 #habilitar mediatype ej: pdf
 spring.mvc.contentnegotiation.favor-parameter=true
